welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:21: error: not enough arguments for method verifTrie: (tab: Array[Int])Boolean.
Unspecified value parameter tab.
    estTrie=verifTrie()
                     ^